--- a/data/custom.css
+++ b/data/custom.css
@@ -8,3 +8,23 @@ div[type="column"] {
   flex: 1;
   width: 50%;
 }
+
+supplied {
+  color: #0055aa;
+  font-style: italic;
+}
+
+unclear {
+  color: #888;
+  text-decoration: underline dotted red;
+}
+
+hi[rend="italic"] {
+  font-style: italic;
+}
+hi[rend="bold"] {
+  font-weight: bold;
+}
+hi[rend="underline"] {
+  text-decoration: underline;
+}
